Logistic Regression working

--- a/Theano-tutorial-Logistic-Regression.ipynb
+++ b/Theano-tutorial-Logistic-Regression.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Theano-tutorial-Logistic-Regression"
+  "name": ""
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,7 +32,7 @@
       "rng = np.random\n",
       "N = 4000\n",
       "feats = 20\n",
-      "D = (rng.randn(N/2, feats)+[[zzz+1 for zzz in zz] for zz in rng.randn(N/2, feats)], \\\n",
+      "D = (vstack((rng.randn(N/2, feats),np.asarray([np.asarray([zzz+1 for zzz in zz]) for zz in rng.randn(N/2, feats)]))), \\\n",
       "        np.asarray([0]*(N/2) + [1]*(N/2)))\n",
       "training_steps = 10000"
      ],
@@ -45,60 +45,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "temp = rng.randint(size=N, low=0, high=2)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 38
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "whos"
+      "#temp = rng.randint(size=N, low=0, high=2)\n",
+      "# temp = np.asarray([[1,2],[3,4]])\n",
+      "# print temp.shape\n",
+      "# temp2 = np.asarray([zz for zz in temp])\n",
+      "# print temp2.shape\n",
+      "# D[0].shape[0]\n",
+      "# D[1].shape[0]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
        "text": [
-        "Variable         Type                    Data/Info\n",
-        "--------------------------------------------------\n",
-        "D                tuple                   n=2\n",
-        "N                int                     4000\n",
-        "T                module                  <module 'theano.tensor' f<...>ano/tensor/__init__.pyc'>\n",
-        "b                ScalarSharedVariable    b\n",
-        "cost             TensorVariable          Elemwise{add,no_inplace}.0\n",
-        "err              ndarray                 4000: 4000 elems, type `float64`, 32000 bytes\n",
-        "feats            int                     20\n",
-        "function         function                <function function at 0x106b7fed8>\n",
-        "gb               TensorVariable          DimShuffle{}.0\n",
-        "gw               TensorVariable          Elemwise{add,no_inplace}.0\n",
-        "i                int                     0\n",
-        "p_1              TensorVariable          Elemwise{true_div,no_inplace}.0\n",
-        "pred             ndarray                 4000: 4000 elems, type `int8`, 4000 bytes\n",
-        "predict          Function                <theano.compile.function_<...>on object at 0x117881250>\n",
-        "prediction       TensorVariable          Elemwise{gt,no_inplace}.0\n",
-        "rng              module                  <module 'numpy.random' fr<...>mpy/random/__init__.pyc'>\n",
-        "shared           function                <function shared at 0x106b1e848>\n",
-        "temp             ndarray                 4000: 4000 elems, type `int64`, 32000 bytes\n",
-        "train            Function                <theano.compile.function_<...>on object at 0x1063e7a90>\n",
-        "training_steps   int                     10000\n",
-        "w                TensorSharedVariable    w\n",
-        "x                TensorVariable          x\n",
-        "xent             TensorVariable          Elemwise{sub,no_inplace}.0\n",
-        "y                TensorVariable          y\n",
-        "z1               int8                    1\n",
-        "z2               int64                   1\n",
-        "zz               ndarray                 20: 20 elems, type `float64`, 160 bytes\n",
-        "zzz              float64                 -1.23414214021\n"
+        "4000"
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -120,14 +87,14 @@
        "stream": "stdout",
        "text": [
         "Initial model:\n",
-        "[ 1.38980671 -0.0211797  -1.67677107  1.53016202  0.04458027 -0.52230184\n",
-        " -0.87127673  1.13787423  0.79205566  0.10950088  0.07608564  1.48539296\n",
-        " -0.05646129  1.246218   -1.38890484 -0.92075408  1.4630561  -0.84211374\n",
-        "  0.16704903  0.04701836] 0.0\n"
+        "[ 0.7017091  -0.09574428  0.19004256  1.4445099   0.33981812  1.04488319\n",
+        "  0.92139633 -1.10668209  0.39089799 -0.64674375  0.07080369 -0.36007897\n",
+        "  0.08204442 -2.06888848  1.7979983   0.72964714  0.37727382  1.24449723\n",
+        "  0.59812191 -0.23074891] 0.0\n"
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -150,7 +117,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 41
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
@@ -169,21 +136,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "ValueError",
-       "evalue": "Input dimension mis-match. (input[0].shape[0] = 4000, input[1].shape[0] = 2000)\nApply node that caused the error: Elemwise{Composite{[Composite{[Composite{[sub(mul(i0, i1), neg(i2))]}(i0, scalar_softplus(i1), mul(i2, i3))]}(i0, i1, i2, scalar_softplus(i3))]}}(y, Elemwise{Composite{[sub(neg(i0), i1)]}}[(0, 0)].0, Elemwise{sub,no_inplace}.0, Elemwise{neg,no_inplace}.0)\nInputs shapes: [(4000,), (2000,), (4000,), (2000,)]\nInputs strides: [(8,), (8,), (8,), (8,)]\nInputs types: [TensorType(float64, vector), TensorType(float64, vector), TensorType(float64, vector), TensorType(float64, vector)]\nUse the Theano flag 'exception_verbosity=high' for a debugprint of this apply node.",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-42-4d6056d7b08b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Train\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_steps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mpred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;32m/Users/theja/.local/lib/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    586\u001b[0m                     \u001b[0;31m# For the CVM\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    587\u001b[0m                     gof.vm.raise_with_op(self.fn.nodes[self.fn.position_of_error],\n\u001b[0;32m--> 588\u001b[0;31m                                          self.fn.thunks[self.fn.position_of_error])\n\u001b[0m\u001b[1;32m    589\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    590\u001b[0m                     \u001b[0;31m# For the c linker\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/theja/.local/lib/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    577\u001b[0m         \u001b[0mt0_fn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 579\u001b[0;31m             \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    580\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    581\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'position_of_error'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mValueError\u001b[0m: Input dimension mis-match. (input[0].shape[0] = 4000, input[1].shape[0] = 2000)\nApply node that caused the error: Elemwise{Composite{[Composite{[Composite{[sub(mul(i0, i1), neg(i2))]}(i0, scalar_softplus(i1), mul(i2, i3))]}(i0, i1, i2, scalar_softplus(i3))]}}(y, Elemwise{Composite{[sub(neg(i0), i1)]}}[(0, 0)].0, Elemwise{sub,no_inplace}.0, Elemwise{neg,no_inplace}.0)\nInputs shapes: [(4000,), (2000,), (4000,), (2000,)]\nInputs strides: [(8,), (8,), (8,), (8,)]\nInputs types: [TensorType(float64, vector), TensorType(float64, vector), TensorType(float64, vector), TensorType(float64, vector)]\nUse the Theano flag 'exception_verbosity=high' for a debugprint of this apply node."
-       ]
-      }
-     ],
-     "prompt_number": 42
+     "outputs": [],
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
@@ -202,15 +156,15 @@
        "stream": "stdout",
        "text": [
         "Final model:\n",
-        "[ 0.00393401  0.00941731 -0.0425401   0.05276637 -0.02440124  0.00627808\n",
-        " -0.00357578  0.00933039  0.03702086  0.02646278  0.01284875 -0.04593336\n",
-        "  0.01007222 -0.00748024  0.0300843  -0.01940728 -0.01338306  0.02231058\n",
-        "  0.00113928 -0.00503293] -0.046518957407\n",
-        "in sample error: 0.52275\n"
+        "[ 0.44518778  0.45312919  0.43981096  0.49880927  0.42136723  0.43756246\n",
+        "  0.42998108  0.40462826  0.39595374  0.40766217  0.45513428  0.47864124\n",
+        "  0.45004352  0.47176247  0.45224937  0.43309704  0.49205093  0.35281848\n",
+        "  0.39038155  0.44133104] -4.44263396501\n",
+        "in sample error: 0.98925\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
