--- a/Theano-tutorial-adding.ipynb
+++ b/Theano-tutorial-adding.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "Theano-tutorial-adding"
+  "name": ""
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,63 +14,17 @@
       "#Part 1 in this series of notebooks\n",
       "#This notebook will be about adding basic types in Theano\n",
       "#Followed from this url: http://deeplearning.net/software/theano/tutorial/adding.html\n",
-      "import numpy as np"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "import numpy as np\n",
+      "\n",
       "#Matrix conventions for ML\n",
       "mat1 = np.asarray([[1,2],[3,4],[5,6]])#rows are observations, columns are features\n",
       "print mat1.shape\n",
-      "print mat1[2,0]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "(3, 2)\n",
-        "5\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "print mat1[2,0]\n",
+      "\n",
       "#NP Array broadcasting trick for tidyness\n",
       "mat2 = 5\n",
-      "print mat1*mat2"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[[ 5 10]\n",
-        " [15 20]\n",
-        " [25 30]]\n"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "print mat1*mat2\n",
+      "\n",
       "#Theano tutorial: Adding two scalars\n",
       "import theano.tensor as T\n",
       "from theano import function\n",
@@ -89,12 +43,24 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "5.0\n",
+        "(3, 2)\n",
+        "5\n",
+        "[[ 5 10]\n",
+        " [15 20]\n",
+        " [25 30]]\n",
+        "5.0"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "1010.1\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -123,7 +89,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -145,7 +111,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -153,7 +119,7 @@
      "input": [
       "#f is a function which behaves as a regular python function.\n",
       "#We could have used the symbol's eval method as well\n",
-      "print z.eval({x:10,y:200})"
+      "print z.eval({x:10,y:202})"
      ],
      "language": "python",
      "metadata": {},
@@ -162,11 +128,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "210.0\n"
+        "212.0\n"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -202,7 +168,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -227,35 +193,7 @@
        ]
       }
      ],
-     "prompt_number": 21
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "whos"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Variable   Type                        Data/Info\n",
-        "------------------------------------------------\n",
-        "T          module                      <module 'theano.tensor' f<...>ano/tensor/__init__.pyc'>\n",
-        "function   function                    <function function at 0x1088c7f50>\n",
-        "mat1       ndarray                     3x2: 6 elems, type `int64`, 48 bytes\n",
-        "mat2       int                         5\n",
-        "pp         theano.printing.PPrinter    <theano.printing.PPrinter<...> instance at 0x1088b7dd0>\n",
-        "x          TensorVariable              x\n",
-        "y          TensorVariable              y\n",
-        "z          TensorVariable              Elemwise{add,no_inplace}.0\n"
-       ]
-      }
-     ],
-     "prompt_number": 18
+     "prompt_number": 6
     }
    ],
    "metadata": {}
