--- a/parallel_ml_tutorial/notebooks/00 - Tutorial Setup .ipynb
+++ b/parallel_ml_tutorial/notebooks/00 - Tutorial Setup .ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:91f2b56e4ae4baca2208a868838a8f38853d0c9ab588ddc59e3c31fdb510f405"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,7 +32,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -41,7 +43,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -51,7 +54,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -61,7 +65,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -71,7 +76,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -81,7 +87,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -91,7 +98,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -108,7 +116,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "['/Users/theja/Downloads/local/anaconda/anaconda/lib/python2.7/site-packages/numpy']"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -118,7 +136,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 9,
+       "text": [
+        "'1.8.1'"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "heading",
@@ -136,7 +164,22 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Using existing dataset folder:/Users/theja/Downloads/temp/parallel_ml_tutorial/datasets\n",
+        "Checking availability of the 20 newsgroups dataset\n",
+        "Found archive: /Users/theja/Downloads/temp/parallel_ml_tutorial/datasets/20news-bydate.tar.gz\n",
+        "Checking that the 20 newsgroups files exist...\n",
+        "=> Success!\n",
+        "Checking availability of the titanic dataset\n",
+        "=> Success!\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -146,7 +189,20 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "total 28376\r\n",
+        "drwxr-xr-x  22 theja  staff   748B Mar 18  2003 \u001b[34m20news-bydate-test\u001b[m\u001b[m\r\n",
+        "drwxr-xr-x  22 theja  staff   748B Mar 18  2003 \u001b[34m20news-bydate-train\u001b[m\u001b[m\r\n",
+        "-rw-r--r--   1 theja  staff    14M Jul  6 22:07 20news-bydate.tar.gz\r\n",
+        "-rw-r--r--   1 theja  staff    60K Jul  6 22:07 titanic_train.csv\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -172,7 +228,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -182,7 +239,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -192,7 +250,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "array([1, 2, 3])"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -202,7 +270,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -212,7 +281,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "array([[0, 2, 4],\n",
+        "       [1, 3, 5]])"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -222,7 +302,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "(2, 3)"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -232,7 +322,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 18,
+       "text": [
+        "dtype('int64')"
+       ]
+      }
+     ],
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -242,7 +342,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "(3,)"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -252,7 +362,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "dtype('int64')"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -262,7 +382,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "array([ 0.,  0.,  0.,  0.,  0.])"
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -272,7 +402,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "array([[1, 1, 1, 1],\n",
+        "       [1, 1, 1, 1],\n",
+        "       [1, 1, 1, 1]], dtype=int32)"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "heading",
@@ -290,7 +432,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -300,7 +443,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "array([[ 0. ,  1. ,  2. ],\n",
+        "       [ 0.5,  1.5,  2.5]])"
+       ]
+      }
+     ],
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -310,7 +464,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": [
+        "(2, 3)"
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -320,7 +484,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 26,
+       "text": [
+        "dtype('float64')"
+       ]
+      }
+     ],
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -330,7 +504,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "array([1, 2, 3])"
+       ]
+      }
+     ],
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -340,7 +524,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -350,7 +535,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 29,
+       "text": [
+        "array([[ 1. ,  3. ,  5. ],\n",
+        "       [ 1.5,  3.5,  5.5]])"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -360,7 +556,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "array([ 1.,  3.,  5.])"
+       ]
+      }
+     ],
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -370,7 +576,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 31,
+       "text": [
+        "1.0"
+       ]
+      }
+     ],
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -380,7 +596,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "array([ 1. ,  1.5])"
+       ]
+      }
+     ],
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -390,7 +616,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 33,
+       "text": [
+        "19.5"
+       ]
+      }
+     ],
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -400,7 +636,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 34,
+       "text": [
+        "3.25"
+       ]
+      }
+     ],
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -410,7 +656,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 35,
+       "text": [
+        "array([  2.5,   6.5,  10.5])"
+       ]
+      }
+     ],
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -420,7 +676,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 36,
+       "text": [
+        "array([ 3. ,  3.5])"
+       ]
+      }
+     ],
+     "prompt_number": 36
     },
     {
      "cell_type": "heading",
@@ -438,7 +704,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
@@ -448,7 +715,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 38,
+       "text": [
+        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+       ]
+      }
+     ],
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -458,7 +735,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
@@ -468,7 +746,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 40,
+       "text": [
+        "array([[ 0,  1,  2,  3],\n",
+        "       [ 4,  5,  6,  7],\n",
+        "       [ 8,  9, 10, 11]])"
+       ]
+      }
+     ],
+     "prompt_number": 40
     },
     {
      "cell_type": "code",
@@ -478,7 +768,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 41,
+       "text": [
+        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+       ]
+      }
+     ],
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
@@ -488,7 +788,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
@@ -498,7 +799,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 43,
+       "text": [
+        "array([0, 1, 2, 3, 4, 0, 0, 0, 0, 0, 0, 0])"
+       ]
+      }
+     ],
+     "prompt_number": 43
     },
     {
      "cell_type": "code",
@@ -508,7 +819,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 44,
+       "text": [
+        "array([[0, 1, 2, 3],\n",
+        "       [4, 0, 0, 0],\n",
+        "       [0, 0, 0, 0]])"
+       ]
+      }
+     ],
+     "prompt_number": 44
     },
     {
      "cell_type": "heading",
